fixed spacing, moved input form to index.hbs, fixed faq + about, changed link style, changed form spacing, changed cursor for more icon

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,15 @@
 
 #submit {
   width: 45px;
-  margin-top: 3.5em;
+  margin-top: 1.5em;
+}
+
+a {
+  color: white;
+}
+
+a:visited {
+  color: white;
 }
 
 li {
@@ -33,13 +41,16 @@ h2 {
 }
 
 .container{
-  padding: 0em 2em 7em 2em;
 }
 
 .busroute {
   margin-right: 2em;
+  /*margin-bottom: 1.5em;*/
 }
 
+.bus-details {
+  margin-left: 7em;
+}
 /* ICONS */
 
 .more-icon {
@@ -47,6 +58,10 @@ h2 {
   padding: .25em 3em 0em 2em;
   display: inline-block;
   float: left;
+}
+
+.more-icon:hover {
+  cursor: pointer;
 }
 
 .footerimg {
@@ -84,6 +99,7 @@ img.icon {
   width: 100%;
   padding: 10px;
   background-color: #276fbf;
+  margin-bottom: 0;
 }
 
 /* NAVIGATION */
@@ -311,11 +327,14 @@ background-color: #51743E;
 	display: inline-block;
 }
 /* FAQ & ABOUT STYLES */
-.faq {
-  margin: 10px;
-  padding: 1em;
-  background-color: #F6F6F6;
-  color: #031a3c;
+.info {
+  padding: 0em 2em 7em 2em;
+  /*margin: 10px;*/
+  /*background-color: #F6F6F6;*/
+  /*color: #031a3c;*/
+}
+.info h2{
+  margin-bottom: 0px;
 }
 
 
